# julien-resume

./: .gitignore  CLAUDE.md  Dockerfile  Julien Pireaud.md  README.md  compose.yaml  resume-ats.css  resume-stylish.css  resume.css  resume.json
.github/workflows/: release-resume.yml
editor/: README.md  package-lock.json  package.json
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/src/: lib.rs  main.rs
editor/src/lib/: types.ts
editor/src/routes/: +page.svelte
sample/: resume.json
scripts/: ats_smoke_test.py  build-resume.sh  build_ats_docx.py  render_resume.py  resume_model.py
