[package]
name = "resume-editor"
version = "0.1.0"
description = "Desktop editor for resume.json and local Docker builds"
authors = ["Julien Pireaud"]
edition = "2021"

[lib]
name = "resume_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

